--- a/term-paper-template-master/tex/literatur.bib
+++ b/term-paper-template-master/tex/literatur.bib
@@ -131,3 +131,21 @@ doi={10.1109/WCSE.2012.26},
 ISSN={}, 
 month={Nov}
 }
+
+@misc{Apps,
+  title = {Google Play Apps Statistik},
+  howpublished = {\url{https://de.statista.com/statistik/daten/studie/74368/umfrage/anzahl-der-verfuegbaren-apps-im-google-play-store/}},
+  note = {Accessed: 2018-04-22}
+}
+
+@misc{RiskIQ,
+  title = {RiskIQ report about Malicious Mobile Apps in Google Play},
+  howpublished = {\url{https://www.riskiq.com/press-release/riskiq-reports-malicious-mobile-apps-google-play-have-spiked-nearly-400/}},
+  note = {Accessed: 2018-04-22}
+}
+@book{trinius2010visualisierung,
+  title={Visualisierung von Malware-Verhalten},
+  author={Trinius, Philipp},
+  year={2010},
+  publisher={Universit{\"a}tsbibliothek Dortmund}
+}
