--- a/term-paper-template-master/tex/seminararbeit.tex
+++ b/term-paper-template-master/tex/seminararbeit.tex
@@ -26,9 +26,10 @@ An dieser Stelle steht eine kurze Zusammenfassung des Inhaltes des Dokuments.
 
 \subsection{Android und Sicherheitslücken}
 
-\subsection{App Store}
-
+\subsection{Google Play Store}
+Der Google Play Store oder früher auch Android Market wurde am 28. Ausgust 2008 eröffnet. Dieser bietet den Nutzern einfaches herunterladen und installieren von mobilen Anwendungen, sogenannten Apps. Im Google Play Store sind bereits über 3,7 Millionen Anwendungen  bereit zum Herunterladen (Stand vom 18. April 2018) \cite{Apps} und jeden Monat kommen ca. 30.000 neue Apps hinzu \cite{bartsch2014zertifizierte}. Durch den rasanten Wachstum steigt auch die Anzahl von schädlicher Software, sogenannter Malware. Der Anteil von bösartigen Apps ist von 2011 bis 2013 um 388\% gewachsen \cite{RiskIQ}. Da nicht alle Anwendungen von Mitarbeitern geprüft werden können hat Google das Programm Bouncer ins Leben gerufen (siehe Kapitel \ref{sec:Bouncer}).
 \subsection{Malware}
+Der Begriff Malware steht für malicous software und bezeichnet Programme, welche unerwünschte oder auch schädliche Funktionen ausführen. Sie stellen eine immer größer werdende Bedrohung dar und durch den rasanten Wachstum ist eine manuelle Auswertung mittlerweile unmöglich geworden. Obwohl es sich bei vielen neuen Arten um verschiedene Varianten bereits bekannter Malware handelt, müssen Analysten erst jedes Sample erneut analysieren um dies feststellen zu können \cite{trinius2010visualisierung}. Bei der Analyse kann Grundsätzlich in zwei Arten unterschieden werden, Statische und Dynamische Analyse (siehe Kapitel \ref{sec:Statische Analyse} und \ref{sec:Dynamische Analyse}).
 
 \subsubsection{Android als Ziel}
 
@@ -36,13 +37,15 @@ An dieser Stelle steht eine kurze Zusammenfassung des Inhaltes des Dokuments.
 
 \section{Analysemethoden}
 
-\subsection{Statische Analyse}
+\subsection{Statische Analyse} \label{sec:Statische Analyse}
 
 \subsubsection{Data Flow}
 
 \subsubsection{Control Flow}
 
-\subsection{Dynamische Analyse}
+\subsection{Dynamische Analyse} \label{sec:Dynamische Analyse}
+
+\section{Bouncer} \label{sec:Bouncer}
 
 \section{FlowDroid}
 
@@ -51,15 +54,7 @@ An dieser Stelle steht eine kurze Zusammenfassung des Inhaltes des Dokuments.
 \section{Fazit}
 
  Eine Abkürzung = \ac{A2A} 
- \cite[S.1]{Feng:2014:ASD:2635868.2635869} 
- \cite{burguera2011crowdroid}
- \cite{yan2012droidscope}
- \cite{bartsch2014zertifizierte}
- \cite{Ding:2017:MMG:3058060.3058065}
- \cite{Spreitzenbarth2015}
- \cite{Cesare:2010:CMU:1862294.1862301}
- \cite{Arzt:2014:FPC:2666356.2594299}
- \cite{6394931}
+
 
 %% --------------------------------------------------------------------
 
