--- a/term-paper-template-master/tex/literatur.bib
+++ b/term-paper-template-master/tex/literatur.bib
@@ -149,3 +149,31 @@ month={Nov}
   year={2010},
   publisher={Universit{\"a}tsbibliothek Dortmund}
 }
+
+@misc{AndoidMarktanteil,
+  title = {Marktanteil von Android},
+  howpublished = {\url{https://www.netzwelt.de/news/164146-android-vs-ios-plattform-treue-android-91-prozent-deutlich-hoeher.html}},
+  note = {Accessed: 2018-04-25}
+}
+
+@misc{GooglePlayDownloads,
+  title = {Anzahl der Apps, die im Google Play Store heruntergeladen wurden},
+  howpublished = {\url{https://de.statista.com/statistik/daten/studie/243412/umfrage/anzahl-von-downloads-im-google-play-store/}},
+  note = {Accessed: 2018-04-25}
+}
+
+@article{scheid2012kapitel,
+  title={Kapitel 1 Sicherheit mobiler Ger{\"a}te-Schutzma{\ss}nahmen, Angriffsarten \& Angriffserkennung auf Android},
+  author={Scheid, Julian},
+  journal={Ausgew{\"a}hlte Themen der IT-Sicherheit},
+  pages={7},
+  year={2012}
+}
+
+@misc{LinuxSicherheitskonzept,
+  title = {Sicherheitskonzepte von Linux},
+  howpublished = {\url{https://wiki.ubuntuusers.de/Archiv/Sicherheitskonzepte/}},
+  note = {Accessed: 2018-04-25}
+}
+
+
