--- a/term-paper-template-master/tex/literatur.bib
+++ b/term-paper-template-master/tex/literatur.bib
@@ -176,4 +176,9 @@ month={Nov}
   note = {Accessed: 2018-04-25}
 }
 
+@misc{Android-Versionen,
+  title = {Anteile der verschiedenen Android-Versionen an allen Geräten mit Android OS weltweit im Zeitraum 10. bis 16. April 2018},
+  howpublished = {\url{https://de.statista.com/statistik/daten/studie/180113/umfrage/anteil-der-verschiedenen-android-versionen-auf-geraeten-mit-android-os/}},
+  note = {Accessed: 2018-04-25}
+}
 
