--- a/term-paper-template-master/tex/literatur.bib
+++ b/term-paper-template-master/tex/literatur.bib
@@ -182,3 +182,10 @@ month={Nov}
   note = {Accessed: 2018-04-25}
 }
 
+@misc{PermissonModel,
+  title = {Request App Permissions},
+  howpublished = {\url{https://developer.android.com/training/permissions/requesting.html}},
+  note = {Accessed: 2018-04-25}
+}
+
+
